# secret-sha-rs

./: Cargo.toml  Readme.md
src/: main.rs
src/api/: mod.rs  new_secret.rs  server.rs
src/model/: secret.rs
src/service/: dispatcher.rs  mod.rs
src/service/methods/: create_secret.rs
src/service/storage/: in_memory_store.rs  mod.rs  store.rs
